--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@ p{
 <body>
     <h1>TDR</h1>
     <ul>
-        <li><a href="page1.html">CLOTHING</a></li>
-        <li><a href="page2.html">SHOES</a></li>
-      <li><a href="page3.html">BAGS</a></li>
-        <li><a href="page4.html">FRAGRANCE</a></li>
+        <li><a href="Page1.html">CLOTHING</a></li>
+        <li><a href="Page2.html">SHOES</a></li>
+      <li><a href="Page3.html">BAGS</a></li>
+        <li><a href="Page4.html">FRAGRANCE</a></li>
 
     </ul>
     <br>
