--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ p{
 <body>
     <h1>TDR</h1>
     <ul>
-        <li><a href="Page1.html">CLOTHING</a></li>
+        <li><a href="index.html">CLOTHING</a></li>
         <li><a href="Page2.html">SHOES</a></li>
       <li><a href="Page3.html">BAGS</a></li>
         <li><a href="Page4.html">FRAGRANCE</a></li>
