--- a/page4.html
+++ b/page4.html
@@ -121,9 +121,9 @@ p{
 
      <ul>
         <li><a href="index.html">CLOTHING</a></li>
-        <li><a href="Page2.html">SHOES</a></li>
-        <li><a href="Page3.html">BAGS</a></li>
-        <li><a href="Page4.html">FRAGRANCE</a></li>
+        <li><a href="page2.html">SHOES</a></li>
+        <li><a href="page3.html">BAGS</a></li>
+        <li><a href="page4.html">FRAGRANCE</a></li>
 
     </ul>
     <br><br><BR>
